refactor: fix style code with lint:fix and prettier:fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,17 @@
 @import './libs/_reset.scss';
 
+@import './src/styles/base/_fonts.scss';
+
 body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: $back;
-    color: $text;
-    user-select: none; // test postcss
+  font-family: 'Montserrat', sans-serif;
+  background-color: $back;
+  color: $text;
+  user-select: none; // test postcss
 }
 
 .image {
-    width: 200px;
-    height: 100px;
-    background-size: cover;
-    background-image: url(../assets/rsschool-test.png);
+  width: 200px;
+  height: 100px;
+  background-size: cover;
+  background-image: url('../assets/rsschool-test.png');
 }
