--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
-  font-family: "Montserrat";
-  src: url("../assets/fonts/montserrat-regular.woff2") format("woff2"),
-    url("../assets/fonts/montserrat-regular.woff") format("woff");
+  font-family: 'Montserrat';
+  src:
+    url('../assets/fonts/montserrat-regular.woff2') format('woff2'),
+    url('../assets/fonts/montserrat-regular.woff') format('woff');
 }
