chore: add new fonts

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,6 +1,2 @@
-@font-face {
-  font-family: 'Montserrat';
-  src:
-    url('../assets/fonts/montserrat-regular.woff2') format('woff2'),
-    url('../assets/fonts/montserrat-regular.woff') format('woff');
-}
+@import url('https://fonts.googleapis.com/css2?family=Gloock&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;700&display=swap');
