--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -6,6 +6,10 @@ $color-price: #2b8813;
 $color-rating: #fcc400;
 $color-logo: #ff8a00;
 $color-button: #0058c1;
+$color-button-hover: #1969c7;
+$color-bg-card: #f5f6f6;
+$color-border: #e0e3e5;
+$color-error: #ef4444;
 
 // breakpoints
 $width-mobile: 768px;
