chore: change css styles for banner component

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -15,7 +15,19 @@
     cursor: default;
   }
 
-  &:not(:disabled):hover {
+  &:not(:disabled):hover,
+  &:not(:disabled):active {
     background: $color-button-hover;
+  }
+
+  &--white {
+    width: 124px;
+    background: $color-white;
+    color: $color-primary;
+
+    &:not(:disabled):hover,
+    &:not(:disabled):active {
+      background: $color-gray;
+    }
   }
 }
