--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  width: 100vw;
+  width: 100%;
   height: 680px;
   color: $color-white;
   background-image: url('../../assets/img/discover-world.png');
