chore: change margin-bottom for section on mobile

--- a/src/components/pages/signup-page/signup-page.scss
+++ b/src/components/pages/signup-page/signup-page.scss
@@ -6,6 +6,10 @@
 .signup-section {
   margin-bottom: 104px;
 
+  @include mobile {
+    margin-bottom: 80px;
+  }
+
   &__container {
     @include container;
     display: grid;
