--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,7 +1,8 @@
 // colors
 $color-white: #ffffff;
 $color-primary: #001329;
-$color-secondary: #99a1a9;
+$color-secondary-40: #99a1a9;
+$color-secondary-60: #66717f;
 $color-gray: #f2f2f2;
 $color-price: #2b8813;
 $color-rating: #fcc400;
