--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -33,4 +33,29 @@
       opacity: 0.4;
     }
   }
+
+  &-password {
+    position: relative;
+
+    .form-field__input {
+      padding-right: 46px;
+    }
+  }
+
+  &__check {
+    position: absolute;
+    right: 24px;
+    bottom: 19px;
+    width: 20px;
+    height: 20px;
+    background-image: url('../../assets/icons/visibility.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+
+    &.password-visible {
+      background-image: url('../../assets/icons/visibility-off.svg');
+    }
+  }
 }
