--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -77,3 +77,17 @@ $font-xs: 600 12px/1.5 $font-family-jakarta;
     padding: 0 20px;
   }
 }
+
+// another
+
+@mixin chevron {
+  position: absolute;
+  display: block;
+  content: '';
+  width: 20px;
+  height: 20px;
+  background-image: url('../../../assets/icons/chevron-up.svg');
+  background-position: center;
+  background-size: cover;
+  transition: all 0.1s linear;
+}
