--- a/src/components/header/header-nav/header-nav.scss
+++ b/src/components/header/header-nav/header-nav.scss
@@ -9,7 +9,8 @@
     position: relative;
     display: inline-block;
     transition: all 0.2s ease;
-    & > a {
+    & > a,
+    &:after {
       opacity: 0.5;
     }
 
