refactor: remove unnecessary css properties

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -3,7 +3,7 @@
   height: 680px;
   color: $color-white;
   background-image: url('../../assets/img/discover-world.png');
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
