--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -55,7 +55,7 @@
     width: 20px;
     height: 20px;
     background-image: url('../../assets/icons/visibility.svg');
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     cursor: pointer;
