--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -31,7 +31,7 @@
       height: 8px;
       margin-left: 6px;
       background-image: url('../../assets/icons/link-arrow.svg');
-      background-position: center center;
+      background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
       transition: transform 0.3s ease-in-out;
