--- a/src/components/header/header-nav/header-nav.scss
+++ b/src/components/header/header-nav/header-nav.scss
@@ -21,45 +21,30 @@
       }
     }
 
-    &_nested {
-      &-closed {
-        .item__inner-list {
-          display: none;
-        }
-      }
-
-      &-closed:after {
+    &_with-submenu {
+      &:after {
         @include chevron;
         top: calc(50% - 10px);
         right: -20px;
         cursor: pointer;
       }
 
-      &-opened {
-        .item__inner-list {
-          display: block;
+      &:hover {
+        &:after {
+          @include chevron;
+          top: calc(50% - 10px);
+          right: -20px;
+          transform: rotate(-180deg);
+          cursor: pointer;
         }
-      }
-
-      &-opened:after {
-        @include chevron;
-        top: calc(50% - 10px);
-        right: -20px;
-        transform: rotate(-180deg);
-        cursor: pointer;
       }
     }
 
-    .item__inner-list {
-      position: absolute;
-      top: 35px;
+    & .dropdown-menu {
       padding: 12px 0;
       width: 140px;
-      background: $color-white;
-      border-radius: 8px;
-      box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.08);
 
-      .header__link {
+      & .header__link {
         display: inline-block;
         width: 100%;
         padding: 12px 20px;
