--- a/src/components/header/header-user/header-user.scss
+++ b/src/components/header/header-user/header-user.scss
@@ -27,53 +27,45 @@
         @include account-icon;
       }
     }
-  }
 
-  .dropdown-menu {
-    position: absolute;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    padding: 12px 20px 24px;
-    top: 35px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.08);
-
-    &_closed {
-      display: none;
-    }
-
-    &_opened {
-      display: flex;
-    }
-
-    &__button {
-      padding: 16px 40px;
-      white-space: nowrap;
-    }
-
-    &__link {
-      display: flex;
-      align-items: center;
+    .dropdown-menu {
+      flex-direction: column;
       justify-content: center;
-      white-space: nowrap;
-      gap: 8px;
-      font: $font-button;
-      color: $color-button;
-      text-transform: capitalize;
-      border-bottom: 2px solid $color-button;
+      align-items: center;
+      gap: 16px;
+      padding: 12px 20px 24px;
 
-      &__span {
-        display: inline-block;
-        width: 8px;
-        height: 8px;
-        background: url('../../../assets/icons/create-account-icon.svg') center/cover;
+      &_opened {
+        display: flex;
+      }
+
+      &__button {
+        padding: 16px 40px;
+        white-space: nowrap;
+      }
+
+      &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        white-space: nowrap;
+        gap: 8px;
+        font: $font-button;
+        color: $color-button;
+        text-transform: capitalize;
+        border-bottom: 2px solid $color-button;
+
+        &__span {
+          display: inline-block;
+          width: 8px;
+          height: 8px;
+          background: url('../../../assets/icons/create-account-icon.svg') center/cover;
+        }
       }
     }
   }
 
-  &__user-bag {
+  &__user-cart {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,9 +75,9 @@
     height: 100%;
     padding-left: 16px;
 
-    .user-bag {
+    .user-cart {
       &__icon {
-        @include bag-icon;
+        @include cart-icon;
       }
 
       &__counter {
