--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -26,4 +26,23 @@
     height: 15px;
     z-index: 0;
   }
+
+  .dropdown-menu {
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 35px;
+    border-radius: 8px;
+    background: $color-white;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.08);
+
+    &_closed {
+      display: none;
+    }
+
+    &_opened {
+      display: block;
+    }
+  }
 }
