--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -11,12 +11,19 @@
     height: 540px;
   }
 
+  &--main-page {
+    height: calc(100dvh - 80px);
+    background-image: url('../../assets/img/hero-image.jpg');
+  }
+
   &__container {
     @include container;
+    height: 100%;
   }
 
   &__content {
     max-width: 840px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     padding-top: 250px;
@@ -27,6 +34,19 @@
 
     @include mobile {
       padding-top: 120px;
+    }
+
+    .banner--main-page & {
+      justify-content: flex-end;
+      padding: 120px 0;
+
+      @include tablet {
+        padding: 80px 0;
+      }
+
+      @include mobile {
+        padding: 40px 0;
+      }
     }
   }
 
