refactor: add subtitle style variable

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -40,6 +40,7 @@ $font-family-jakarta: 'Plus Jakarta Sans', sans-serif;
 $font-family-gloock: 'Gloock', serif;
 
 $font-main: 500 16px/1.5 $font-family-jakarta;
+$font-subtitle: 500 18px/1.5 $font-family-jakarta;
 $font-logo: 400 26px/0.92 $font-family-gloock;
 $font-button: 700 15px/1.5 $font-family-jakarta;
 $font-label: 600 15px/1.5 $font-family-jakarta;
