--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,6 +8,11 @@
     justify-content: flex-start;
     gap: 64px;
     height: 100%;
+
+    @include tablet {
+      justify-content: space-between;
+      gap: 20px;
+    }
   }
 
   &__link {
@@ -21,6 +26,10 @@
     width: calc(100% + 20px);
     height: 15px;
     z-index: 0;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   .dropdown-menu {
