chore: add class .hidden for body

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,10 @@ body {
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
+
+  &.hidden {
+    overflow: hidden;
+  }
 }
 
 header,
