--- a/src/components/header/header-nav/header-nav.scss
+++ b/src/components/header/header-nav/header-nav.scss
@@ -70,6 +70,7 @@
         top: calc(50% - 10px);
         right: -20px;
         cursor: pointer;
+        transform: rotate(180deg);
 
         @include tablet {
           display: none;
@@ -78,7 +79,7 @@
 
       &:hover {
         &:after {
-          transform: rotate(-180deg);
+          transform: rotate(0);
         }
       }
     }
