--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -19,7 +19,7 @@
     color: $color-button;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid $color-button;
+    position: relative;
     transition:
       border 0.3s ease-in-out,
       color 0.3s ease-in-out;
@@ -37,13 +37,27 @@
       transition: transform 0.3s ease-in-out;
     }
 
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background: $color-button;
+      left: 0;
+      bottom: -4px;
+      transition: width 0.2s ease-in-out;
+    }
+
     &:hover,
     &:active {
       color: $color-button-hover;
-      border-bottom: 1px solid $color-bg-card;
 
       &::after {
         transform: rotate(45deg);
+      }
+
+      &::before {
+        width: 0;
       }
     }
   }
