feat: handle logged user data and draw it

--- a/src/components/header/header-user/header-user.scss
+++ b/src/components/header/header-user/header-user.scss
@@ -39,6 +39,11 @@
 
       &__icon {
         @include account-icon;
+
+        &_authorized {
+          background: salmon;
+          border-radius: 100%;
+        }
       }
     }
 
