--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 680px;
   color: $color-white;
-  background-image: url('../../assets/img/discover-world.png');
+  background-image: url('../../assets/img/banner_discover-world.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@
 
   &--main-page {
     height: calc(100dvh - 80px);
-    background-image: url('../../assets/img/hero-image.jpg');
+    background-image: url('../../assets/img/main_hero-image.jpg');
   }
 
   &__container {
