--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -68,4 +68,25 @@
       background-size: cover;
     }
   }
+
+  &--cart {
+    padding: 0;
+    width: 48px;
+    height: 48px;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-image: url('../../assets/icons/cart-icon.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
 }
