--- a/src/components/product-card/product-card.scss
+++ b/src/components/product-card/product-card.scss
@@ -2,6 +2,8 @@
   border-radius: 8px;
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.08);
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   &__media {
     height: 252px;
