--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -6,7 +6,14 @@
   padding: 64px 64px 42px 64px;
   background-color: $color-bg-card;
 
-  &__main-info {
+  &__routes {
+    font-size: 11px;
+    font-weight: 700;
+    text-transform: uppercase;
+    opacity: 0.5;
+  }
+
+  &__info {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -63,9 +70,32 @@
     }
   }
 
-  &__form {
+  &__add-to-cart {
     & button {
       width: 100%;
+    }
+  }
+
+  &__about {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      padding-bottom: 16px;
+      border-bottom: 1px solid rgba(0, 19, 41, 0.12);
+
+      &:nth-last-child(1) {
+        border: none;
+      }
+
+      & p {
+        font-size: 14px;
+        margin-left: 5px;
+      }
     }
   }
 }
