feat: add showLogoutBtn in breadcrumbs

--- a/src/components/breadcrumbs/breadcrumbs.scss
+++ b/src/components/breadcrumbs/breadcrumbs.scss
@@ -1,6 +1,8 @@
 .breadcrumbs {
   &__container {
     @include container;
+    display: flex;
+    justify-content: space-between;
   }
 
   &__links {
