--- a/src/components/account/account-details/account-details.scss
+++ b/src/components/account/account-details/account-details.scss
@@ -10,10 +10,14 @@
     flex-direction: column;
     background: $color-bg-card;
     border-radius: 8px;
+
+    @include tablet {
+      margin-top: 8px;
+    }
   }
 
   &__edit-btn {
     margin-top: 32px;
-    max-width: 212px;
+    max-width: fit-content;
   }
 }
