--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -129,4 +129,61 @@
       background-color: $color-secondary-40;
     }
   }
+
+  &--cancel {
+    position: relative;
+    background: none;
+    border-radius: 0;
+    padding: 0;
+    color: $color-secondary-40;
+    transition: transform 0.3s ease-in-out;
+
+    &:not(:disabled):hover,
+    &:not(:disabled):active {
+      background: none;
+      transform: scale(1.06);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      bottom: 0px;
+      transform: translate(0, -50%);
+      background-color: $color-secondary-40;
+    }
+  }
+
+  &--change-password {
+    position: relative;
+    background: none;
+    width: fit-content;
+    border-radius: 0;
+    padding: 0;
+    margin-left: 30px;
+    color: $color-button-hover;
+    transition: transform 0.3s ease-in-out;
+
+    &:not(:disabled):hover,
+    &:not(:disabled):active {
+      background: none;
+      transform: scale(1.03);
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 26px;
+      height: 25px;
+      top: 50%;
+      left: -30px;
+      transform: translate(0, -50%);
+      background-image: url('../../assets/icons/change-password-icon.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
 }
