--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -5,10 +5,6 @@
   display: flex;
   flex-direction: column;
 
-  &--login {
-    width: min(544px, 100%);
-  }
-
   @include mobile {
     padding: 32px;
   }
@@ -54,6 +50,32 @@
     @include mobile {
       align-items: flex-start;
       flex-direction: column;
+    }
+  }
+
+  &--login {
+    width: min(544px, 100%);
+  }
+
+  &--details {
+    &__content {
+      @media (max-width: 1430px) {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
+
+  &--password {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: rgba($color-button, 0.2);
+
+    @include mobile {
+      padding: 14px 8px;
     }
   }
 }
