--- a/src/pages/catalog-page/catalog-page.scss
+++ b/src/pages/catalog-page/catalog-page.scss
@@ -1,45 +1,10 @@
-.shop-hero {
-  &__container {
+.catalog-page {
+  &__loading {
     @include container;
-  }
-
-  &__wrapper {
+    @include font-h4;
+    margin: 48px 0;
     display: flex;
-    gap: 72px;
-    width: 100%;
-    padding-bottom: 104px;
-    border-bottom: 1px solid $color-border;
-  }
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    align-self: flex-end;
-  }
-
-  &__title {
-    @include font-h2;
-    margin-bottom: 24px;
-  }
-
-  &__text {
-    font-size: 18px;
-    line-height: 150%;
-  }
-
-  &__image {
-    width: 100%;
-    height: 300px;
-    border-radius: 8px;
-    overflow: hidden;
-    background-image: url('../../assets/img/shop_hero-image.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    @include tablet {
-      display: none;
-    }
+    align-items: center;
+    justify-content: center;
   }
 }
