--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -72,7 +72,7 @@
     gap: 20px;
     padding: 20px;
     border-radius: 8px;
-    background-color: rgba($color-button, 0.2);
+    background-color: $color-bg-card;
 
     @include mobile {
       padding: 14px 8px;
