--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -186,4 +186,31 @@
       background-size: cover;
     }
   }
+
+  &--reset {
+    background: transparent;
+    padding: 0;
+    color: $color-button;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background: $color-button;
+      left: 0;
+      bottom: -4px;
+      transition: width 0.2s ease-in-out;
+    }
+
+    &:not(:disabled):hover,
+    &:not(:disabled):active {
+      background: transparent;
+
+      &::before {
+        width: 0;
+      }
+    }
+  }
 }
