feat: implement sort products in shop

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -41,6 +41,10 @@
   &__option {
     &[value=''] {
       display: none;
+
+      .select--sort & {
+        display: block;
+      }
     }
   }
 }
