--- a/src/components/header/header-user/header-user.scss
+++ b/src/components/header/header-user/header-user.scss
@@ -21,12 +21,13 @@
 
     .user-account {
       &__title {
-        display: flex;
-        align-items: center;
-        justify-content: center;
         opacity: 0.5;
         user-select: none;
         cursor: unset;
+        max-width: 150px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
 
         @include tablet {
           display: none;
@@ -41,6 +42,8 @@
         @include account-icon;
 
         &_authorized {
+          width: 1.5rem;
+          height: 1.5rem;
           background: salmon;
           border-radius: 100%;
         }
