--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -191,4 +191,62 @@
       background-size: cover;
     }
   }
+
+  &--reset {
+    background: transparent;
+    padding: 0;
+    color: $color-button;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background: $color-button;
+      left: 0;
+      bottom: -4px;
+      transition: width 0.2s ease-in-out;
+    }
+
+    &:not(:disabled):hover,
+    &:not(:disabled):active {
+      background: transparent;
+
+      &::before {
+        width: 0;
+      }
+    }
+  }
+
+  &--add-address {
+    position: relative;
+    background: none;
+    border-radius: 0;
+    padding: 0;
+    color: $color-button;
+    transition: all 0.3s ease-in-out;
+
+    &:not(:disabled):hover,
+    &:not(:disabled):active {
+      background: none;
+      color: $color-button-hover;
+
+      &::after {
+        background: $color-button-hover;
+        width: 0;
+      }
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      bottom: 0px;
+      background: $color-button;
+      transition: all 0.3s ease-in-out;
+    }
+  }
 }
