--- a/src/pages/product-page/product-page.scss
+++ b/src/pages/product-page/product-page.scss
@@ -1,7 +1,10 @@
 .product-page {
   padding-bottom: 48px;
+
   &__container {
     display: flex;
     justify-content: center;
+    gap: 24px;
+    padding: 0 120px;
   }
 }
