--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,8 +1,13 @@
 .product__slider {
   display: flex;
   flex-direction: column;
-  max-width: 700px;
-  min-width: 0;
+  width: calc(50% - 12px);
+  gap: 24px;
+  user-select: none;
+
+  @media (max-width: 1400px) {
+    width: calc(100% - 20px);
+  }
 
   .swiper {
     width: 100%;
@@ -12,7 +17,7 @@
 
       .swiper-slide {
         width: 25%;
-        height: 140px;
+        aspect-ratio: 1;
         opacity: 0.4;
 
         &-thumb-active {
@@ -26,7 +31,7 @@
 
       .swiper-slide {
         width: 100%;
-        height: 607px;
+        aspect-ratio: 1;
       }
     }
 
@@ -41,11 +46,6 @@
       height: 100%;
       object-fit: cover;
       border-radius: 8px;
-    }
-
-    &-slide {
-      background-size: cover;
-      background-position: center;
     }
   }
 }
