--- a/src/pages/product-page/product-page.scss
+++ b/src/pages/product-page/product-page.scss
@@ -2,9 +2,14 @@
   padding-bottom: 48px;
 
   &__container {
+    @include container;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 24px;
-    padding: 0 120px;
+
+    @media (max-width: 1400px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
