fix: use const from variables.scss instead media query

--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -11,8 +11,12 @@
     padding: 32px;
   }
 
-  @media (max-width: 1400px) {
-    width: calc(100% - 20px);
+  @include laptop {
+    width: calc(80% - 20px);
+  }
+
+  @include mobile {
+    width: calc(90% - 20px);
   }
 
   &__routes {
