--- a/src/pages/product-page/product-page.scss
+++ b/src/pages/product-page/product-page.scss
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     gap: 24px;
 
-    @media (max-width: 1400px) {
+    @include laptop {
       flex-direction: column;
       align-items: center;
     }
