refactor: change adaptive for input and form blocks

--- a/src/components/account/account-addresses/account-addresses.scss
+++ b/src/components/account/account-addresses/account-addresses.scss
@@ -15,6 +15,10 @@
       margin-top: 8px;
     }
 
+    @include small-mobile {
+      padding: 24px;
+    }
+
     &.centered {
       align-items: center;
     }
