--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -9,6 +9,10 @@
     padding: 32px;
   }
 
+  @include small-mobile {
+    padding: 24px;
+  }
+
   &__title {
     @include font-h2;
     margin-bottom: 12px;
@@ -48,7 +52,6 @@
     gap: 24px;
 
     @include mobile {
-      align-items: flex-start;
       flex-direction: column;
     }
   }
