--- a/src/components/account/account-details/account-details.scss
+++ b/src/components/account/account-details/account-details.scss
@@ -14,6 +14,10 @@
     @include tablet {
       margin-top: 8px;
     }
+
+    @include small-mobile {
+      padding: 24px;
+    }
   }
 
   &__edit-btn {
