--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -5,6 +5,7 @@
   width: calc(50% - 12px);
   padding: 64px;
   background-color: $color-bg-card;
+  border-radius: 8px;
 
   @include tablet {
     gap: 20px;
@@ -12,11 +13,11 @@
   }
 
   @include laptop {
-    width: calc(80% - 20px);
+    width: 80%;
   }
 
   @include mobile {
-    width: calc(100% - 20px);
+    width: 100%;
   }
 
   &__routes {
