chore: add styles for prices like in Figma layout

--- a/src/components/product-card/product-card.scss
+++ b/src/components/product-card/product-card.scss
@@ -55,10 +55,11 @@
 
   &__price {
     color: $color-price;
+    font: $font-button;
 
     &--old {
       text-decoration: line-through;
-      color: $color-primary;
+      color: $color-secondary-40;
     }
 
     &--new {
@@ -67,7 +68,9 @@
     }
   }
 
-  //&__days {}
+  &__days {
+    font: $font-label;
+  }
 
   &__bottom {
     display: flex;
