--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -15,7 +15,7 @@ $color-button-hover: #1969c7;
 $color-bg-card: #f5f6f6;
 $color-border: #e0e3e5;
 $color-error: #ef4444;
-$color-success: #45d845;
+$color-success: #2b8813;
 
 // breakpoints
 $width-small-mobile: 500px;
