--- a/src/components/product-card/product-card.scss
+++ b/src/components/product-card/product-card.scss
@@ -91,6 +91,11 @@
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease-in-out;
+
+    @include pre-tablet {
+      opacity: 1;
+      pointer-events: all;
+    }
   }
 
   &__title {
@@ -130,6 +135,33 @@
     .product-card__button {
       opacity: 1;
       pointer-events: all;
+    }
+  }
+
+  &.card-overlay-enabled {
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      inset: 0;
+      z-index: 2;
+      background: $color-white;
+      opacity: 0.5;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      z-index: 3;
+      width: 100px;
+      height: 100px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-image: url('../../assets/icons/spinner-icon.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 }
